Allow painting when no shortcuts have passed to current combination of keys

This patch does two things:
1) Changes the formula of the priority in the way that the
   shortcuts with left mouse button would have higher priority
   than ones with middle and right one
2) Add a tag to KisAbstractInputAction::canIgnoreModifiers(), which
   shows that the action can be run with any particular modifier
   (the default action).

BUG:329192